--- a/x11/libxcb/Makefile
+++ b/x11/libxcb/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	libxcb
-PORTVERSION=	1.16
+PORTVERSION=	1.17.0
 CATEGORIES=	x11
 MASTER_SITES=	https://xcb.freedesktop.org/dist/
 
@@ -10,10 +10,9 @@ WWW=		https://xcb.freedesktop.org/
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/COPYING
 
-BUILD_DEPENDS=	xcb-proto>=1.9:x11/xcb-proto \
-		${LOCALBASE}/libdata/pkgconfig/pthread-stubs.pc:devel/libpthread-stubs
-RUN_DEPENDS=	${LOCALBASE}/libdata/pkgconfig/pthread-stubs.pc:devel/libpthread-stubs
+BUILD_DEPENDS=	xcb-proto>=1.17:x11/xcb-proto
 
+GNU_CONFIGURE_MANPREFIX=${PREFIX}/share
 CONFIGURE_ARGS=	--disable-devel-docs --without-doxygen --enable-xinput --enable-xkb
 
 USES=		cpe python:build tar:xz xorg xorg-cat:lib
