--- a/x11/xcb-util/Makefile
+++ b/x11/xcb-util/Makefile
@@ -2,14 +2,15 @@ PORTNAME=	xcb-util
 PORTVERSION=	0.4.1
 CATEGORIES=	x11
 MASTER_SITES=	http://xcb.freedesktop.org/dist/
-DISTFILES=      ${PORTNAME}-${PORTVERSION}.tar.xz
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Module with libxcb/libX11 extension/replacement libraries
+WWW=		https://xcb.freedesktop.org/
 
 LICENSE=	mit
+LICENSE_FILE=	${WRKSRC}/COPYING
 
-USES=		gmake libtool pathfix pkgconfig tar:xz xorg xorg-cat:lib
+USES=		tar:xz gmake libtool pathfix pkgconfig xorg xorg-cat:lib
 USE_LDCONFIG=	yes
 USE_XORG=	xau xcb xdmcp
 INSTALL_TARGET=	install-strip
