perform move ops

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1293,7 +1293,7 @@ SUBDIR += py-geojson
 SUBDIR += py-gevent
 SUBDIR += py-gitdb
 SUBDIR += py-gitpython
-SUBDIR += py-gobject3
+SUBDIR += py-gobject
 SUBDIR += py-google-i18n-address
 SUBDIR += py-googleapis-common-protos
 SUBDIR += py-graphql-core
@@ -1636,7 +1636,7 @@ SUBDIR += pybind11-json
 SUBDIR += pybind11_abseil
 SUBDIR += pybind11_protobuf
 SUBDIR += pydbus-common
-SUBDIR += pygobject3-common
+SUBDIR += pygobject-common
 SUBDIR += pylint
 SUBDIR += qca
 SUBDIR += qcoro
