--- a/security/libsecret/Makefile
+++ b/security/libsecret/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	libsecret
 PORTVERSION=	0.20.5
-PORTREVISION=	2
+PORTREVISION=	3
 CATEGORIES=	security gnome
 MASTER_SITES=	GNOME
 
@@ -19,6 +19,7 @@ USES=		compiler gnome meson pkgconfig python tar:xz vala:build
 USE_GNOME=	glib20 intltool introspection:build libxslt:build
 
 NO_TEST=	yes
+TESTING_UNSAFE=	gi.repository.GLib.GError: g-io-error-quark: Remote closed the output
 
 .include <bsd.port.pre.mk>
 
