--- a/devel/py-gobject/Makefile
+++ b/devel/py-gobject/Makefile
@@ -1,5 +1,4 @@
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
-PKGNAMESUFFIX=	3
 PORTREVISION=	1
 
 COMMENT=	Python ${PYTHON_VER} bindings for GObject
@@ -8,7 +7,7 @@ SLAVE_PORT=	python
 
 MAKE_JOBS_UNSAFE=	yes
 
-MASTERDIR=	${.CURDIR}/../../devel/pygobject3-common
+MASTERDIR=	${.CURDIR}/../../devel/pygobject-common
 PLIST=		${.CURDIR}/pkg-plist
 
 PLIST_SUB+=	PYTHON_VER=${PYTHON_VER}
