--- a/devel/pygobject-common/Makefile
+++ b/devel/pygobject-common/Makefile
@@ -4,7 +4,7 @@ PORTREVISION=	0
 CATEGORIES=	devel python
 MASTER_SITES=	GNOME/sources/pygobject/${PORTVERSION:C/^([0-9]+\.[0-9]+).*/\1/}
 PKGNAMEPREFIX?=	py
-PKGNAMESUFFIX?=	3-common
+PKGNAMESUFFIX?=	-common
 DISTNAME=	pygobject-${PORTVERSION}
 DIST_SUBDIR=	gnome
 
