--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1293,7 +1293,6 @@ SUBDIR += py-geojson
 SUBDIR += py-gevent
 SUBDIR += py-gitdb
 SUBDIR += py-gitpython
-SUBDIR += py-gobject
 SUBDIR += py-google-i18n-address
 SUBDIR += py-googleapis-common-protos
 SUBDIR += py-graphql-core
@@ -1420,6 +1419,7 @@ SUBDIR += py-pybind11
 SUBDIR += py-pydantic
 SUBDIR += py-pyelftools
 SUBDIR += py-pygdbmi
+SUBDIR += py-pygobject
 SUBDIR += py-pyicu
 SUBDIR += py-pyinotify
 SUBDIR += py-pythran
