--- a/devel/py-pygobject/Makefile
+++ b/devel/py-pygobject/Makefile
@@ -1,18 +1,44 @@
-PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
-PORTREVISION=	1
+PORTNAME=	pygobject
+DISTVERSION=	3.50.0
+PORTREVISION?=	0
+CATEGORIES=	devel python
+MASTER_SITES=	GNOME/sources/${PORTNAME}/${PORTVERSION:C/^([0-9]+\.[0-9]+).*/\1/}
+PKGNAMEPREFIX?=	${PYTHON_PKGNAMEPREFIX}
+DIST_SUBDIR=	gnome
 
-COMMENT=	Python ${PYTHON_VER} bindings for GObject
+MAINTAINER=	ports@MidnightBSD.org
+COMMENT?=	Python bindings for GObject Introspection
+WWW=		https://pygobject.gnome.org/
 
-SLAVE_PORT=	python
+LICENSE=	lgpl2.1
+LICENSE_FILE=	${WRKSRC}/COPYING
 
-MAKE_JOBS_UNSAFE=	yes
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}cairo>=1.16:graphics/py-cairo@${PY_FLAVOR}
+LIB_DEPENDS=	libffi.so:devel/libffi
 
-MASTERDIR=	${.CURDIR}/../../devel/pygobject-common
-PLIST=		${.CURDIR}/pkg-plist
+USES=		gnome pkgconfig python:3.9+ tar:xz
 
-PLIST_SUB+=	PYTHON_VER=${PYTHON_VER}
+BINARY_ALIAS=	python3=${PYTHON_CMD}
+PORTSCOUT=	limitw:1,even
 
-NO_TEST=	yes
-MESON_ARGS+=	-Dtests=false
+SLAVE_PORT?=	no
 
-.include "${MASTERDIR}/Makefile"
+.if ${SLAVE_PORT} == common
+USES+=		meson
+USE_GNOME=	glib20:build introspection:build
+
+do-install:
+	${INSTALL_DATA} ${WRKSRC}/_build/pygobject-3.0.pc \
+		${STAGEDIR}${PREFIX}/libdata/pkgconfig/pygobject-3.0.pc
+	@${MKDIR} ${STAGEDIR}${PREFIX}/include/pygobject-3.0
+	${INSTALL_DATA} ${WRKSRC}/gi/pygobject.h \
+		${STAGEDIR}${PREFIX}/include/pygobject-3.0/pygobject.h
+.else
+BUILD_DEPENDS+=	${PYTHON_PKGNAMEPREFIX}meson-python>=0.12.1:devel/meson-python@${PY_FLAVOR}
+RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}cairo>=1.16:graphics/py-cairo@${PY_FLAVOR} \
+		${LOCALBASE}/libdata/pkgconfig/pygobject-3.0.pc:devel/pygobject-common
+USE_GNOME=	cairo glib20 introspection
+USE_PYTHON=	autoplist concurrent pep517
+.endif
+
+.include <bsd.port.mk>
