--- a/multimedia/xanim/Makefile
+++ b/multimedia/xanim/Makefile
@@ -1,12 +1,10 @@
 PORTNAME=	xanim
 PORTVERSION=	2.92.0
-PORTREVISION=	4
+PORTREVISION=	5
 CATEGORIES=	multimedia graphics
-MASTER_SITES=	ftp://ftp.nstu.ru/pub/mirrors/xanim.va.pubnix.com/:main \
-		FREEBSD_LOCAL/dinoex:main,DEFAULT \
-		ftp://ftp.nstu.ru/pub/mirrors/xanim.va.pubnix.com/dlls/
+MASTER_SITES=	FREEBSD_LOCAL/dinoex
 DISTNAME=	xanim2920
-DISTFILES=	${DISTNAME}${EXTRACT_SUFX}:main ${EXTRA_FILES}
+DISTFILES=	${DISTNAME}${EXTRACT_SUFX} ${EXTRA_FILES}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Play most popular animation formats and show pictures
@@ -23,6 +21,7 @@ NO_CDROM=	Must be redistributed without fee
 # which is fatal for imake.
 USES=		imake xorg
 USE_GCC=	yes
+USE_CSTD=	gnu99
 USE_XORG=	xext xt sm ice xext x11
 MAKE_ARGS+=	-j 2 # safe and helps even the single-CPU machines
 DLLDIR=		${PREFIX}/lib/X11/xanim
