--- a/www/xfce4-smartbookmark-plugin/Makefile
+++ b/www/xfce4-smartbookmark-plugin/Makefile
@@ -1,28 +1,26 @@
 PORTNAME=	xfce4-smartbookmark-plugin
-PORTVERSION=	0.5.2
-PORTREVISION=	1
+PORTVERSION=	0.6.0
 CATEGORIES=	www xfce
 MASTER_SITES=	XFCE/panel-plugins
 DIST_SUBDIR=	xfce4
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Query search engines from the Xfce panel
+WWW=		https://docs.xfce.org/panel-plugins/xfce4-smartbookmark-plugin/start
 
 LICENSE=	gpl2
 LICENSE_FILE=	${WRKSRC}/COPYING
 
-USES=		compiler:c11 gettext-tools gmake gnome libtool pkgconfig \
-		tar:bzip2 xfce
-USE_GNOME=	cairo gdkpixbuf gtk30 intltool
-USE_XFCE=	panel
+USES=		compiler:c11 gettext-tools gnome meson pkgconfig tar:xz xfce
+USE_GNOME=	gtk30
+USE_XFCE=	libmenu panel
 
-GNU_CONFIGURE=	yes
-INSTALL_TARGET=	install-strip
+OPTIONS_DEFINE=	NLS
+OPTIONS_SUB=	yes
 
-OPTIONS_DEFINE=		NLS
-OPTIONS_SUB=		yes
+NLS_USES=	gettext-runtime
 
-NLS_USES=		gettext-runtime
-NLS_CONFIGURE_ENABLE=	nls
+post-patch-NLS-off:
+	@${REINPLACE_CMD} -e "/^subdir('po')/d" ${WRKSRC}/meson.build
 
 .include <bsd.port.mk>
