--- a/multimedia/gstreamer1-plugins-core/Makefile
+++ b/multimedia/gstreamer1-plugins-core/Makefile
@@ -1,6 +1,5 @@
 PORTNAME=	gstreamer1-plugins-core
 PORTVERSION=	${_GST_VERSION}
-PORTREVISION=	1
 CATEGORIES=	multimedia audio
 MASTER_SITES=	# empty
 DISTFILES=	# empty
@@ -8,23 +7,11 @@ EXTRACT_ONLY=	# empty
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Core set of typical audio and video GStreamer plugins
-WWW=		http://gstreamer.net
+WWW=		https://gstreamer.freedesktop.org/
 
 LICENSE=	gpl2
 
-NO_ARCH=	yes
-NO_BUILD=	yes
-GST_DIR=	lib/gstreamer-1.0
-PLIST_FILES=	${GST_DIR}/.gstreamer-plugins-core.keep
-
 USES=		gstreamer
-
-OPTIONS_DEFINE=	DVD
-OPTIONS_DEFAULT=DVD
-DVD_DESC=	Include DVD related plugins
-
-.include <bsd.mport.options.mk>
-
 # Audio plugins
 USE_GSTREAMER+=	mpg123 ogg vorbis
 
@@ -37,10 +24,16 @@ USE_GSTREAMER+=	pango
 # Multimedia plugins
 USE_GSTREAMER+=	libav good theora
 
-.if ${PORT_OPTIONS:MDVD}
-# dvd related plugins plugins
-USE_GSTREAMER+=	a52dec dvdread resindvd dts
-.endif
+NO_ARCH=	yes
+NO_BUILD=	yes
+GST_DIR=	lib/gstreamer-${_GST1_LIB_VER}
+PLIST_FILES=	${GST_DIR}/.gstreamer-plugins-core.keep
+
+OPTIONS_DEFINE=	DVD
+OPTIONS_DEFAULT=DVD
+
+DVD_DESC=	Include DVD related plugins
+DVD_USE=	GSTREAMER=a52dec,dvdread,resindvd,dts
 
 do-install:
 	${MKDIR} ${PREFIX}/${GST_DIR}
