--- a/multimedia/gstreamer1-plugins-aom/Makefile
+++ b/multimedia/gstreamer1-plugins-aom/Makefile
@@ -1,15 +1,15 @@
-PORTREVISION=	1
+PORTREVISION=	0
 CATEGORIES=	multimedia
 
 COMMENT=	GStreamer (libaom) plugin
 
-GST_PLUGIN=	aom
+LIB_DEPENDS=	libaom.so:multimedia/aom
+
+MASTERDIR=	${.CURDIR:H:H}/multimedia/gstreamer1-plugins
+
+PLIST=		${.CURDIR}/pkg-plist
+
 DIST=		bad
-
-MASTERDIR=	${.CURDIR}/../../multimedia/gstreamer1-plugins
-
-PLIST=  ${.CURDIR}/pkg-plist
-
-LIB_DEPENDS=   libaom.so:multimedia/aom
+GST_PLUGIN=	aom
 
 .include "${MASTERDIR}/Makefile"
