update , add libyuv

--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -182,6 +182,7 @@ SUBDIR += libvisual04
 SUBDIR += libwmf
 SUBDIR += libwmf-nox11
 SUBDIR += libwpg03
+SUBDIR += libyuv
 SUBDIR += linux-c7-cairo
 SUBDIR += linux-c7-cairo-gobject
 SUBDIR += linux-c7-dri
