astro/gpsd: update

--- a/astro/gpsd/Makefile
+++ b/astro/gpsd/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	gpsd
-PORTVERSION=	3.23.1
-PORTREVISION=	1
+PORTVERSION=	3.25
+PORTREVISION=	2
 CATEGORIES=	astro geography
 MASTER_SITES=	SAVANNAH
 
@@ -11,13 +11,19 @@ WWW=		https://gpsd.gitlab.io/gpsd/index.html
 LICENSE=	bsd3
 LICENSE_FILE=	${WRKSRC}/COPYING
 
+FLAVORS=	default nox11
+FLAVOR?=	${FLAVORS:[1]}
+nox11_PKGNAMESUFFIX=	-nox11
+
 USES=		cpe pathfix pkgconfig python scons
 CPE_VENDOR=	gpsd_project
 USE_LDCONFIG=	yes
 USE_RC_SUBR=	gpsd
 
+PIE_UNSAFE=	yes
+
 MAKE_ARGS=	manbuild=no \
-		mandir="man" \
+		mandir="share/man" \
 		pkgconfig="libdata/pkgconfig" \
 		prefix="${PREFIX}" \
 		qt=no \
@@ -31,6 +37,12 @@ OPTIONS_DEFINE=		AIVDM ASHTECH CPPBIND DBUS EARTHMATE EVERMORE FURY FV18 \
 			ONCORE PASSTHROUGH PPS PROFILING PYSERIAL RECONFIGURE \
 			RTCM104V2 RTCM104V3 SHMEXPORT SIRF SOCKEXPORT \
 			SUPERSTARII TIMING TNT TRIPMATE TSIP UBLOX USB X11
+
+.if ${FLAVOR} == nox11
+COMMENT+=	(without GUI)
+OPTIONS_EXCLUDE=	X11
+.endif
+
 OPTIONS_DEFAULT=	AIVDM ASHTECH CPPBIND EARTHMATE EVERMORE FURY FV18 \
 			GARMIN GARMINTXT GEOSTAR GPSCLOCK ITRAX NAVCOM NCURSES \
 			NETFEED NMEA0183 NTP NTPSHM NTRIP OCEANSERVER ONCORE \
@@ -137,12 +149,10 @@ RECONFIGURE_MAKE_ARGS_OFF=	reconfigure=no
 CPPBIND_MAKE_ARGS_OFF=		libgpsmm=no
 PYSERIAL_BUILD_DEPENDS=		${PYTHON_PKGNAMEPREFIX}pyserial>=0:comms/py-pyserial@${PY_FLAVOR}
 PYSERIAL_RUN_DEPENDS=		${PYTHON_PKGNAMEPREFIX}pyserial>=0:comms/py-pyserial@${PY_FLAVOR}
-X11_BUILD_DEPENDS=		${PYTHON_PKGNAMEPREFIX}cairo>=0:graphics/py-cairo@${PY_FLAVOR} \
-				${PYTHON_PKGNAMEPREFIX}gobject3>=0:devel/py-gobject3@${PY_FLAVOR}
-X11_RUN_DEPENDS=		${PYTHON_PKGNAMEPREFIX}cairo>=0:graphics/py-cairo@${PY_FLAVOR} \
-				${PYTHON_PKGNAMEPREFIX}gobject3>=0:devel/py-gobject3@${PY_FLAVOR}
+X11_BUILD_DEPENDS=		${PYTHON_PKGNAMEPREFIX}cairo>=0:graphics/py-cairo@${PY_FLAVOR}
+X11_RUN_DEPENDS=		${PYTHON_PKGNAMEPREFIX}cairo>=0:graphics/py-cairo@${PY_FLAVOR}
 X11_USES=			gnome
-X11_USE=			GNOME=gtk30
+X11_USE=			gnome=gtk30 pygobject3
 X11_MAKE_ARGS_OFF=		xgps=no
 
 # Build control
