--- a/devel/Makefile
+++ b/devel/Makefile
@@ -267,9 +267,11 @@ SUBDIR += gitui
 SUBDIR += glade
 SUBDIR += glib20
 SUBDIR += glibmm
+SUBDIR += glibmm26
 SUBDIR += glog
 SUBDIR += gmake
 SUBDIR += gn
+SUBDIR += gnome-builder
 SUBDIR += gnome-common
 SUBDIR += gnulib
 SUBDIR += gnulibiberty
@@ -293,6 +295,7 @@ SUBDIR += gradle-completion
 SUBDIR += gsettings-desktop-schemas
 SUBDIR += gsoap
 SUBDIR += gstreamer1-plugins-soup
+SUBDIR += gtranslator
 SUBDIR += gumbo
 SUBDIR += highlighterkit
 SUBDIR += highway
@@ -455,6 +458,7 @@ SUBDIR += libpthread-stubs
 SUBDIR += librest
 SUBDIR += librttopo
 SUBDIR += libsigc++20
+SUBDIR += libsigc++30
 SUBDIR += libsigsegv
 SUBDIR += libslang2
 SUBDIR += libspice-server
