add some gnome ports, update gedit

--- a/editors/Makefile
+++ b/editors/Makefile
@@ -8,6 +8,8 @@ SUBDIR += emacs
 SUBDIR += emacs-devel
 SUBDIR += gedit
 SUBDIR += gedit-plugins
+SUBDIR += gnome-latex
+SUBDIR += gnome-text-editor
 SUBDIR += impress
 SUBDIR += jedit
 SUBDIR += joe
