--- a/games/hitori/Makefile
+++ b/games/hitori/Makefile
@@ -1,14 +1,13 @@
-
-
 PORTNAME=	hitori
-PORTVERSION=	3.22.4
-PORTREVISION=	1
+PORTVERSION=	3.38.4
+PORTREVISION=	2
 CATEGORIES=	games gnome
 MASTER_SITES=	GNOME
-DIST_SUBDIR=	gnome3
+DIST_SUBDIR=	gnome
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Hitori
+WWW=		https://wiki.gnome.org/Apps/Hitori
 
 LICENSE=	gpl3
 LICENSE_FILE=	${WRKSRC}/COPYING
@@ -18,8 +17,8 @@ BUILD_DEPENDS=	itstool:textproc/itstool \
 
 PORTSCOUT=	limitw:1,even
 
-USES=		gettext gmake localbase pathfix pkgconfig \
-		tar:xz
+USES=		compiler:c11 gettext gmake gnome localbase meson pathfix \
+		pkgconfig tar:xz
 USE_GNOME=	cairo gtk30 librsvg2 libxml2:build
 INSTALLS_ICONS=	yes
 GNU_CONFIGURE=	yes
