--- a/games/lightsoff/Makefile
+++ b/games/lightsoff/Makefile
@@ -1,18 +1,18 @@
 PORTNAME=	lightsoff
-PORTVERSION=	3.38.0
-PORTREVISION=	1
+PORTVERSION=	40.0.1
+PORTREVISION=	3
 CATEGORIES=	games gnome
-MASTER_SITES=	GNOME
+MASTER_SITES=	GNOME/sources/${PORTNAME}/${PORTVERSION:C/^([0-9]+)\..*/\1/}
 DIST_SUBDIR=	gnome
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Gnome ligthsoff
+WWW=		https://wiki.gnome.org/Lightsoff
 
 LICENSE=	gpl2
 LICENSE_FILE=	${WRKSRC}/COPYING
 
-BUILD_DEPENDS=	vala:lang/vala \
-		itstool:textproc/itstool
+BUILD_DEPENDS=	itstool:textproc/itstool
 LIB_DEPENDS=	libclutter-gtk-1.0.so:graphics/clutter-gtk3 \
 		libclutter-1.0.so:graphics/clutter \
 		libcogl.so:graphics/cogl \
@@ -21,9 +21,8 @@ LIB_DEPENDS=	libclutter-gtk-1.0.so:graphics/clutter-gtk3 \
 PORTSCOUT=	limitw:1,even
 
 USES=		gettext gl gmake gnome localbase meson \
-		pathfix pkgconfig sqlite tar:xz xorg
+		pathfix pkgconfig sqlite tar:xz vala:build xorg
 USE_GNOME=	cairo gtk30 intlhack librsvg2 libxml2:build
-INSTALLS_ICONS=	yes
 USE_XORG=	x11 xcomposite xdamage xext xfixes xi xrandr
 USE_GL=		egl gl
 
