--- a/games/tali/Makefile
+++ b/games/tali/Makefile
@@ -1,29 +1,28 @@
-
-
 PORTNAME=	tali
-PORTVERSION=	3.22.0
-PORTREVISION=	1
+PORTVERSION=	40.8
+PORTREVISION=	3
 CATEGORIES=	games gnome
-MASTER_SITES=	GNOME
-DIST_SUBDIR=	gnome3
+MASTER_SITES=	GNOME/sources/${PORTNAME}/${PORTVERSION:C/^([0-9]+)\..*/\1/}
+DIST_SUBDIR=	gnome
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Gnome tali
+WWW=		https://wiki.gnome.org/Apps/Tali
 
 LICENSE=	gpl2
 LICENSE_FILE=	${WRKSRC}/COPYING
 
 BUILD_DEPENDS=	itstool:textproc/itstool
+LIB_DEPENDS=	libgnome-games-support-1.so:games/libgnome-games-support
 
 PORTSCOUT=	limitw:1,even
 
-USES=		gettext gmake gnome localbase pathfix pkgconfig tar:xz
+USES=		gettext gnome localbase meson pkgconfig \
+		python:build tar:xz
 USE_GNOME=	cairo gtk30 intlhack librsvg2 libxml2:build
-INSTALLS_ICONS=	yes
-GNU_CONFIGURE=	yes
-CONFIGURE_ARGS=	--localstatedir=${PREFIX}/share
 
-GLIB_SCHEMAS=	org.gnome.tali.gschema.xml
+BINARY_ALIAS=	python3=${PYTHON_CMD}
+GLIB_SCHEMAS=	org.gnome.Tali.gschema.xml
 
 post-install:
 	@${MKDIR} ${STAGEDIR}${PREFIX}/share/games
