--- a/x11/gnome-session/Makefile
+++ b/x11/gnome-session/Makefile
@@ -1,12 +1,12 @@
 PORTNAME=	gnome-session
 PORTVERSION=	42.0
-PORTREVISION=	2
+PORTREVISION=	3
 CATEGORIES=	x11 gnome
 MASTER_SITES=	GNOME/sources/${PORTNAME}/${PORTVERSION:C/^([0-9]+)\..*/\1/}
 DIST_SUBDIR=	gnome
 
 MAINTAINER=	ports@MidnightBSD.org
-COMMENT=	Session component for the GNOME 3 desktop
+COMMENT=	Session component for the GNOME desktop
 WWW=		https://www.gnome.org/
 
 LICENSE=	gpl2+
