add ptyxis and xdg-desktop-portal-gnome/gtk

--- a/x11/Makefile
+++ b/x11/Makefile
@@ -160,6 +160,7 @@ SUBDIR += plasma6-plasma-desktop
 SUBDIR += plasma6-plasma-integration
 SUBDIR += plasma6-plasma-workspace
 SUBDIR += plasma6-plasma
+SUBDIR += ptyxis
 SUBDIR += py-python-xapp
 SUBDIR += py-xcffib
 SUBDIR += py-xdot
@@ -207,6 +208,8 @@ SUBDIR += xconfig
 SUBDIR += xconsole
 SUBDIR += xcursorgen
 SUBDIR += xdesktopwaves
+SUBDIR += xdg-desktop-portal-gnome
+SUBDIR += xdg-desktop-portal-gtk
 SUBDIR += xditview
 SUBDIR += xdm
 SUBDIR += xdotool
