--- a/x11-toolkits/gtkmm30/Makefile
+++ b/x11-toolkits/gtkmm30/Makefile
@@ -1,36 +1,27 @@
-# Created by: Martin Klaffenboeck <martin.klaffenboeck@gmx.at>
-
 PORTNAME=	gtkmm
-PORTVERSION=	3.24.2
-PORTREVISION?=	1
+DISTVERSION=	3.24.9
 CATEGORIES=	x11-toolkits
 MASTER_SITES=	GNOME
 PKGNAMESUFFIX=	30
-DIST_SUBDIR=	gnome3
+DIST_SUBDIR=	gnome
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	C++ wrapper for Gtk+3
+WWW=		http://gtkmm.sourceforge.net/
 
 LICENSE=	lgpl2.1
 
-USES+=		tar:xz
-
 PORTSCOUT=	limitw:1,even
 
-USES+=		gettext gmake gnome libtool pathfix pkgconfig \
-		compiler:c++11-lang
-USE_CXXSTD=	c++11
+USES=		compiler:c++11-lang gnome localbase:ldflags meson \
+		pkgconfig python:build tar:xz
 USE_GNOME=	gdkpixbuf gtk30 glibmm cairomm atkmm pangomm
-GNU_CONFIGURE=	yes
 USE_LDCONFIG=	yes
-CONFIGURE_ARGS=	--disable-documentation
-INSTALL_TARGET=	install-strip
-BINARY_WRAPPERS=	gm4
+
+MESON_ARGS=	-Dbuild-documentation=false \
+		-Dbuild-demos=false \
+		-Dcpp_std=c++11
 
 PLIST_SUB=	API_VERSION="3.0"
-
-post-patch:
-	@${REINPLACE_CMD} -e '/^SUBDIRS =/s/tests//' \
-		${WRKSRC}/Makefile.in
 
 .include <bsd.port.mk>
