--- a/x11-toolkits/gtksourceview4/Makefile
+++ b/x11-toolkits/gtksourceview4/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	gtksourceview
-PORTVERSION=	4.8.0
-PORTREVISION=	1
+PORTVERSION=	4.8.3
+PORTREVISION=	2
 CATEGORIES=	x11-toolkits gnome
 MASTER_SITES=	GNOME
 PKGNAMESUFFIX=	4
@@ -13,14 +13,13 @@ WWW=		https://wiki.gnome.org/Projects/GtkSourceView
 LICENSE=	lgpl2.1
 LICENSE_FILE=	${WRKSRC}/COPYING
 
-BUILD_DEPENDS=	vala:lang/vala
 LIB_DEPENDS=	libfribidi.so:converters/fribidi
 
 PORTSCOUT=	limitw:1,even
 
-USES=		compiler:c11 gettext gnome meson pkgconfig tar:xz
+USES=		compiler:c11 gettext gnome meson pkgconfig tar:xz vala:build
 USE_CSTD=	c11
-USE_GNOME=	cairo gdkpixbuf gtk30 introspection:build libxml2
+USE_GNOME=	cairo gdkpixbuf gtk30 libxml2 introspection:build
 USE_LDCONFIG=	yes
 
 # magus
