fixup some bootstrap issues with glib/gobject-introspection.

--- a/devel/glib20/Makefile
+++ b/devel/glib20/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	glib
 DISTVERSION=	2.84.1
-PORTREVISION=	1
+PORTREVISION=	2
 PORTEPOCH=	2
 CATEGORIES=	devel
 MASTER_SITES=	GNOME
@@ -38,11 +38,10 @@ USES=		compiler:c11 cpe gettext gnome iconv:wchar_t localbase:ldflags \
 		meson perl5 pkgconfig python tar:xz ${${FLAVOR}_USES}
 USE_LDCONFIG=	yes
 USE_PERL5=	build
-USE_PYTHON=	py3kplist
+#USE_PYTHON=	py3kplist
 TRIGGERS=	gio-modules glib-schemas
 MESON_ARGS=	-Db_lundef=false \
 		-Ddefault_library=both \
-		-Dfile_monitor_backend='libinotify-kqueue' \
 		-Dinstalled_tests=false \
 		-Dlibelf=disabled \
 		-Dlibmount=disabled \
@@ -86,10 +85,17 @@ MESON_ARGS+=	-Dintrospection=disabled -Ddocumentation=false -Dman-pages=disabled
 OPTIONS_DEFINE=
 PREFIX=		${LOCALBASE}/glib-bootstrap
 PLIST_SUB+=	PORTDOCS='@comment ' NLS='@comment ' MANPAGES='@comment '
+PLIST_FILES+=	/usr/local/libdata/ldconfig/glib-bootstrap
 .else
 MAKE_ENV+= LD_LIBRARY_PATH=${LOCALBASE}/glib-bootstrap/lib
 BINARY_ALIAS+=	g-ir-scanner=${LOCALBASE}/gobject-introspection-bootstrap/bin/g-ir-scanner
 MESON_ARGS+=	-Dintrospection=enabled
+.endif
+
+.if exists(/usr/include/sys/inotify.h)
+MESON_ARGS+=	-Dfile_monitor_backend='inotify'
+.else
+MESON_ARGS+=	-Dfile_monitor_backend='libinotify-kqueue'
 .endif
 
 .if ${FLAVOR:U} == default
@@ -119,6 +125,9 @@ post-patch:
 	${REINPLACE_CMD} -e '/inotify_init1/d' \
 		-e '/inotify.h/d' \
 		${WRKSRC}/meson.build
+	${REINPLACE_CMD} -e 's|kfreebsd|midnightbsd|g' \
+		${WRKSRC}/glib/gnulib/gl_cv_func_printf_infinite/meson.build \
+		${WRKSRC}/glib/gnulib/gl_cv_func_printf_infinite_long_double/meson.build
 	${REINPLACE_CMD} -e 's|%%LOCALBASE%%|${LOCALBASE}|' \
 		${WRKSRC}/gio/xdgmime/xdgmime.c \
 		${WRKSRC}/glib/gutils.c \
