--- a/x11-themes/Makefile
+++ b/x11-themes/Makefile
@@ -35,6 +35,7 @@ SUBDIR += midnightbsd-backgrounds
 SUBDIR += oxygen-icons
 SUBDIR += plasma6-breeze
 SUBDIR += plasma6-breeze-gtk
+SUBDIR += plasma6-kde-gtk-config
 SUBDIR += plasma6-oxygen
 SUBDIR += plasma6-plasma-workspace-wallpapers
 SUBDIR += plasma6-qqc2-breeze-style
