--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -4,6 +4,7 @@ SUBDIR += GraphicsMagick
 SUBDIR += Hermes
 SUBDIR += ImageMagick6
 SUBDIR += ImageMagick7
+SUBDIR += R-cran-ggplot2
 SUBDIR += R-cran-jpeg
 SUBDIR += R-cran-magick
 SUBDIR += R-cran-png
