--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -76,6 +76,7 @@ SUBDIR += eza
 SUBDIR += ezjail
 SUBDIR += fastfetch
 SUBDIR += ffs2recov
+SUBDIR += filelight
 SUBDIR += firstboot-growfs
 SUBDIR += firstboot-midnightbsd-update
 SUBDIR += firstboot-pkgs
@@ -115,6 +116,8 @@ SUBDIR += javaservicewrapper
 SUBDIR += k9s
 SUBDIR += kcron
 SUBDIR += kdeadmin
+SUBDIR += kdebugsettings
+SUBDIR += kdf
 SUBDIR += kdialog
 SUBDIR += kf5-baloo
 SUBDIR += kf5-kwallet
