--- a/x11-clocks/Makefile
+++ b/x11-clocks/Makefile
@@ -4,6 +4,8 @@ SUBDIR += aclock
 SUBDIR += asclock
 SUBDIR += asclock-xlib
 SUBDIR += glclock
+SUBDIR += kteatime
+SUBDIR += ktimer
 SUBDIR += oclock
 SUBDIR += wmbinclock
 SUBDIR += wmcalclock
