--- a/devel/Makefile
+++ b/devel/Makefile
@@ -30,6 +30,7 @@ SUBDIR += R-cran-fontawesome
 SUBDIR += R-cran-foreach
 SUBDIR += R-cran-future
 SUBDIR += R-cran-generics
+SUBDIR += R-cran-gert
 SUBDIR += R-cran-globals
 SUBDIR += R-cran-glue
 SUBDIR += R-cran-gsubfn
@@ -62,6 +63,7 @@ SUBDIR += R-cran-reshape
 SUBDIR += R-cran-rlang
 SUBDIR += R-cran-rprojroot
 SUBDIR += R-cran-rstudioapi
+SUBDIR += R-cran-sourcetools
 SUBDIR += R-cran-sys
 SUBDIR += R-cran-systemfonts
 SUBDIR += R-cran-testit
