update pango, add a bunch of R ports, libspelling

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,6 +1,9 @@
 COMMENT = Development utilities
 
 SUBDIR += 9base
+SUBDIR += R-cran-BH
+SUBDIR += R-cran-Defaults
+SUBDIR += R-cran-Hmisc
 SUBDIR += R-cran-R6
 SUBDIR += R-cran-R.methodsS3
 SUBDIR += R-cran-R.oo
@@ -9,6 +12,7 @@ SUBDIR += R-cran-Rcpp
 SUBDIR += R-cran-RUnit
 SUBDIR += R-cran-S7
 SUBDIR += R-cran-abind
+SUBDIR += R-cran-bindr
 SUBDIR += R-cran-bit
 SUBDIR += R-cran-bit64
 SUBDIR += R-cran-bitops
@@ -17,9 +21,11 @@ SUBDIR += R-cran-brio
 SUBDIR += R-cran-callr
 SUBDIR += R-cran-chron
 SUBDIR += R-cran-cli
+SUBDIR += R-cran-clipr
 SUBDIR += R-cran-covr
 SUBDIR += R-cran-cpp11
 SUBDIR += R-cran-crayon
+SUBDIR += R-cran-cyclocomp
 SUBDIR += R-cran-data.table
 SUBDIR += R-cran-decor
 SUBDIR += R-cran-desc
@@ -34,6 +40,7 @@ SUBDIR += R-cran-gert
 SUBDIR += R-cran-globals
 SUBDIR += R-cran-glue
 SUBDIR += R-cran-gsubfn
+SUBDIR += R-cran-hms
 SUBDIR += R-cran-iterators
 SUBDIR += R-cran-later
 SUBDIR += R-cran-lifecycle
@@ -43,6 +50,7 @@ SUBDIR += R-cran-lubridate
 SUBDIR += R-cran-magrittr
 SUBDIR += R-cran-memoise
 SUBDIR += R-cran-mockery
+SUBDIR += R-cran-mockr
 SUBDIR += R-cran-pak
 SUBDIR += R-cran-parallelly
 SUBDIR += R-cran-parsedate
@@ -52,6 +60,8 @@ SUBDIR += R-cran-pkgload
 SUBDIR += R-cran-plogr
 SUBDIR += R-cran-plyr
 SUBDIR += R-cran-praise
+SUBDIR += R-cran-prettyunits
+SUBDIR += R-cran-progress
 SUBDIR += R-cran-promises
 SUBDIR += R-cran-proto
 SUBDIR += R-cran-purrr
@@ -59,11 +69,13 @@ SUBDIR += R-cran-rJava
 SUBDIR += R-cran-rappdirs
 SUBDIR += R-cran-registry
 SUBDIR += R-cran-rematch2
+SUBDIR += R-cran-remotes
 SUBDIR += R-cran-reshape
 SUBDIR += R-cran-rlang
 SUBDIR += R-cran-rprojroot
 SUBDIR += R-cran-rstudioapi
 SUBDIR += R-cran-sourcetools
+SUBDIR += R-cran-sparsevctrs
 SUBDIR += R-cran-sys
 SUBDIR += R-cran-systemfonts
 SUBDIR += R-cran-testit
