add some ports. remove untar

--- a/archivers/Makefile
+++ b/archivers/Makefile
@@ -29,6 +29,7 @@ SUBDIR += lazperf
 SUBDIR += lcab
 SUBDIR += lha
 SUBDIR += lha-ac
+SUBDIR += libarc
 SUBDIR += libarchive
 SUBDIR += libdeflate
 SUBDIR += liblz4
@@ -100,7 +101,6 @@ SUBDIR += unace
 SUBDIR += unarj
 SUBDIR += unmakeself
 SUBDIR += unrar
-SUBDIR += untar
 SUBDIR += unzip
 SUBDIR += unzoo
 SUBDIR += upx
