--- a/audio/Makefile
+++ b/audio/Makefile
@@ -10,6 +10,7 @@ SUBDIR += cdparanoia
 SUBDIR += chromaprint
 SUBDIR += csound
 SUBDIR += dssi
+SUBDIR += eawpats
 SUBDIR += esound
 SUBDIR += espeak-ng
 SUBDIR += exaile
@@ -199,6 +200,10 @@ SUBDIR += teamspeak3-server
 SUBDIR += thunar-media-tags-plugin
 SUBDIR += timemachine
 SUBDIR += timidity
+SUBDIR += timidity++
+SUBDIR += timidity++-gtk
+SUBDIR += timidity++-slang
+SUBDIR += timidity++-xaw
 SUBDIR += twolame
 SUBDIR += vamp-plugin-sdk
 SUBDIR += vorbis-tools
