add some ruby ports

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1749,11 +1749,17 @@ SUBDIR += rubygem-pkg-config
 SUBDIR += rubygem-racc
 SUBDIR += rubygem-rake
 SUBDIR += rubygem-rdoc
+SUBDIR += rubygem-rspec
+SUBDIR += rubygem-rspec-core
+SUBDIR += rubygem-rspec-expectations
+SUBDIR += rubygem-rspec-mocks
+SUBDIR += rubygem-rspec-support
 SUBDIR += rubygem-rubyinline
 SUBDIR += rubygem-sigdump
 SUBDIR += rubygem-stringio
 SUBDIR += rubygem-strptime
 SUBDIR += rubygem-svn2git
+SUBDIR += rubygem-tdiff
 SUBDIR += rubygem-thor
 SUBDIR += rubygem-thread_safe
 SUBDIR += rubygem-timeout
