--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -430,9 +430,14 @@ SUBDIR += rasqal
 SUBDIR += redland
 SUBDIR += ripgrep
 SUBDIR += rubygem-asciidoctor
+SUBDIR += rubygem-diff-lcs
+SUBDIR += rubygem-loofah
+SUBDIR += rubygem-loofah222
 SUBDIR += rubygem-ltsv
 SUBDIR += rubygem-nokogiri
+SUBDIR += rubygem-nokogiri-diff
 SUBDIR += rubygem-psych
+SUBDIR += rubygem-rails-html-sanitizer
 SUBDIR += rubygem-rdiscount
 SUBDIR += rubygem-rexml
 SUBDIR += rubygem-ronn
