--- a/www/Makefile
+++ b/www/Makefile
@@ -330,9 +330,29 @@ SUBDIR += qt6-webview
 SUBDIR += raphael
 SUBDIR += rubygem-addressable
 SUBDIR += rubygem-cgi
+SUBDIR += rubygem-crass
+SUBDIR += rubygem-erubis
 SUBDIR += rubygem-hpricot
 SUBDIR += rubygem-httpclient
 SUBDIR += rubygem-rack
+SUBDIR += rubygem-rack-accept
+SUBDIR += rubygem-rack-attack
+SUBDIR += rubygem-rack-cache
+SUBDIR += rubygem-rack-contrib
+SUBDIR += rubygem-rack-cors
+SUBDIR += rubygem-rack-mount
+SUBDIR += rubygem-rack-proxy
+SUBDIR += rubygem-rack-session
+SUBDIR += rubygem-rack-session10
+SUBDIR += rubygem-rack-ssl
+SUBDIR += rubygem-rack-test
+SUBDIR += rubygem-rack-timeout
+SUBDIR += rubygem-rack16
+SUBDIR += rubygem-rack22
+SUBDIR += rubygem-rack_csrf
+SUBDIR += rubygem-rackup
+SUBDIR += rubygem-rackup10
+SUBDIR += rubygem-rackup21
 SUBDIR += rubygem-webrick
 SUBDIR += serf
 SUBDIR += sitecopy
