--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1713,6 +1713,8 @@ SUBDIR += rlog
 SUBDIR += rttr
 SUBDIR += ruby-bsearch
 SUBDIR += ruby-gems
+SUBDIR += rubygem-actionview4
+SUBDIR += rubygem-activejob4
 SUBDIR += rubygem-activesupport4
 SUBDIR += rubygem-activesupport5
 SUBDIR += rubygem-ast
@@ -1747,6 +1749,7 @@ SUBDIR += rubygem-observer
 SUBDIR += rubygem-ostruct
 SUBDIR += rubygem-pkg-config
 SUBDIR += rubygem-racc
+SUBDIR += rubygem-rails-deprecated_sanitizer
 SUBDIR += rubygem-rake
 SUBDIR += rubygem-rdoc
 SUBDIR += rubygem-rspec
