--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -174,6 +174,7 @@ SUBDIR += opensearch210
 SUBDIR += opensearch213
 SUBDIR += opensearch216
 SUBDIR += opensp
+SUBDIR += openvanilla-framework
 SUBDIR += p5-CAM-PDF
 SUBDIR += p5-HTML-Format
 SUBDIR += p5-HTML-Tidy
@@ -437,6 +438,8 @@ SUBDIR += rubygem-ltsv
 SUBDIR += rubygem-nokogiri
 SUBDIR += rubygem-nokogiri-diff
 SUBDIR += rubygem-psych
+SUBDIR += rubygem-rails-dom-testing
+SUBDIR += rubygem-rails-dom-testing1
 SUBDIR += rubygem-rails-html-sanitizer
 SUBDIR += rubygem-rdiscount
 SUBDIR += rubygem-rexml
@@ -447,6 +450,7 @@ SUBDIR += scim
 SUBDIR += scim-input-pad
 SUBDIR += scim-kmfl-imengine
 SUBDIR += scim-m17n
+SUBDIR += scim-openvanilla
 SUBDIR += scim-table-imengine
 SUBDIR += scr2txt
 SUBDIR += sdocbook-xml
