--- a/archivers/lzip/Makefile
+++ b/archivers/lzip/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	lzip
-PORTVERSION=	1.23
+PORTVERSION=	1.25
 CATEGORIES=	archivers
 MASTER_SITES=	SAVANNAH/lzip
 
@@ -7,11 +7,12 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Lossless data compressor based on the LZMA algorithm
 WWW=		https://www.nongnu.org/lzip/
 
-LICENSE=	gpl3
+LICENSE=	gpl2
 
 PLIST_FILES=	bin/lzip \
 		share/man/man1/lzip.1.gz
 
+USES=		gmake
 GNU_CONFIGURE=	yes
 GNU_CONFIGURE_MANPREFIX=${PREFIX}/share
 CONFIGURE_ARGS=	CXX="${CXX}" \
