--- a/archivers/libdeflate/Makefile
+++ b/archivers/libdeflate/Makefile
@@ -1,7 +1,7 @@
 PORTNAME=	libdeflate
-PORTVERSION=	1.18
-DISTVERSIONPREFIX=	v
+DISTVERSION=	1.24
 CATEGORIES=	archivers
+MASTER_SITES=	https://github.com/ebiggers/${PORTNAME}/releases/download/v${DISTVERSION}/
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Fast, whole-buffer DEFLATE-based compression library
@@ -11,16 +11,12 @@ LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/COPYING
 
 USES=		cmake:testing pathfix
-USE_GITHUB=	yes
-GH_ACCOUNT=	ebiggers
 USE_LDCONFIG=	yes
+
 CMAKE_ON=	LIBDEFLATE_USE_SHARED_LIB
 CMAKE_TESTING_ON=	LIBDEFLATE_BUILD_TESTS
 
 OPTIONS_DEFINE=	DOCS
-
-post-patch:
-	@${REINPLACE_CMD} -e '/-O2 -DNDEBUG/d' ${WRKSRC}/CMakeLists.txt
 
 post-install-DOCS-on:
 	@${MKDIR} ${FAKE_DESTDIR}${DOCSDIR}
